# GhostCP

./: .env  .env.production  API.md  Cargo.toml  DEPLOYMENT.md  DRAFT.md  INTEGRATION.md  README.deployment.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
api/: Cargo.toml  Dockerfile.dev  Dockerfile.prod  Dockerfile.test
api/migrations/: 001_initial_schema.sql  002_totp_secrets.sql  003_monitoring_tables.sql
api/src/: auth.rs  config.rs  database.rs  jobs.rs  main.rs  templates.rs
api/src/auth/: mod.rs  totp.rs
api/src/drivers/: acme.rs  backup.rs  mod.rs
api/src/drivers/acme/: dns_challenge.rs  http_challenge.rs  letsencrypt.rs  mod.rs
api/src/drivers/dns/: advanced.rs  cloudflare.rs  local.rs  mod.rs  powerdns.rs
api/src/handlers/: apps.rs  auth.rs  backups.rs  cron.rs  databases.rs  dns.rs  domains.rs  jobs.rs  mail.rs  mod.rs  monitoring.rs  ssl.rs  two_factor.rs  users.rs
api/src/middleware/: mod.rs
api/src/models/: dns.rs  mod.rs  ssl.rs  user.rs  web_domain.rs
api/src/system/: acme.rs  app_deployment.rs  backup.rs  database.rs  email_security.rs  files.rs  firewall.rs  ftp.rs  mail.rs  mod.rs  monitoring.rs  nginx.rs
api/src/templates/: dovecot.rs  mod.rs  nginx.rs  php_fpm.rs  postfix.rs
api/tests/: mod.rs
api/tests/common/: mod.rs
api/tests/integration/: api_tests.rs
api/tests/unit/: mod.rs  models.rs
config/nginx/: nginx.conf
scripts/: deploy.sh  health-check.sh  setup.sh
templates/docker/hudu/: docker-compose.yml
templates/nginx/: ghost.conf.tpl  ghostcp-admin.conf  hudu.conf.tpl  proxy.conf.tera  static.conf.tera  vhost.conf.tera  vhost_standard.tera  vhost_wordpress_multisite.tera  wordpress.conf.tera  wordpress.conf.tpl
templates/nginx/snippets/: wordpress_multisite_common.tera
templates/php-fpm/: pool.conf.tera  pool.tera
ui/: Cargo.toml
ui/src/: lib.rs  types.rs
ui/src/api/: mod.rs
ui/src/auth/: mod.rs
ui/src/components/: buttons.rs  cards.rs  footer.rs  forms.rs  layout.rs  mod.rs  modals.rs  navigation.rs  notifications.rs  tables.rs
ui/src/pages/: auth.rs  backups.rs  cron.rs  dashboard.rs  databases.rs  dns.rs  domains.rs  files.rs  jobs.rs  mail.rs  mod.rs  settings.rs  ssl.rs  stats.rs  users.rs
ui/src/types/: mod.rs
ui/src/utils/: mod.rs
