[package]
name = "ghostcp-ui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr", "ssr", "hydrate"] }
leptos_meta = { version = "0.6", features = ["csr", "ssr"] }
leptos_router = { version = "0.6", features = ["csr", "ssr"] }
leptos_axum = { version = "0.6", optional = true }
leptos_dom = { version = "0.6", optional = true }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json"], optional = true }
gloo-net = { version = "0.5", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
tokio = { version = "1.0", features = ["full"], optional = true }

# Web framework (for SSR)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }

# Logging
tracing = "0.1"
console_error_panic_hook = "0.1"

# WASM bindings
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Storage",
    "Location",
    "History",
    "Url",
    "FormData",
    "File",
    "FileList",
] }

# Icons and styling
icondata = "0.3"

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "dep:gloo-net"
]
ssr = [
    "dep:axum",
    "dep:tokio", 
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:reqwest",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-default-features = false